--- a/shooting_js/completed/index.html
+++ b/shooting_js/completed/index.html
@@ -4,10 +4,12 @@
 <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <script src="https://pagecdn.io/lib/pixi/5.3.3/pixi.min.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    矢印キー: 自機の移動
+    <, スペースキー: ミサイル<br />
+    Zキー: 3-way ミサイル, Xキー：レーザー<br />
     <div id="app"></div>
     <script src="src/index.js"></script>
 </body>
